# tools

./: .gitignore  AdvFrontHoleFilling.cpp  AtriumSegment.cpp  BVCoordinatesTrayanova.cpp  CMakeLists.txt  CheckTetraMesh.cpp  CommonTools.cpp  CommonTools.h  CreateImageMask.cpp  Doxyfile.in  GeneralizedRicciFlow.cpp  GenerateAtrialLayers.cpp  GenerateMeshHoleCovers.cpp  LICENSE.md  MakeBiventricularMesh.cpp  MeshSegmentationLaplace.cpp  MeshWatershed.cpp  Morphology3D.cpp  PassLabels2TetMesh.cpp  PassScalarsReverse.cpp  ProjectImage2Mesh.cpp  README.md  ResampleImage.cpp  S2SError.cpp  VTKConvert.cpp  ls_conformal.cpp  nrrd2vtk.cpp  tetmesh_uniform.cpp  zernike.cpp
Android/CallBlockingTestDemo/: settings.gradle
BasicImageOperations/: CMakeLists.txt  CaclulateEntropyFiberAngles.cpp  CombineImageLabels.cpp  ExtractLabels.cpp  ParticleDensityImage.cpp  PixelCounter.cpp  RotateImage3D.cpp
BasicMeshOperations/: AddFibers2Mesh.cpp  CMakeLists.txt  CalculateEdgeLengths.cpp  CalculateFlatteningDistortion.cpp  CheckTetraMesh.cpp  CreateImageMask.cpp  CreatePixelatedTetMesh.cpp  CreateSurfaceMeshEnvelope.cpp  EstimateConductionVelocity.cpp  ExtractShapeRegion.cpp  InterpolateFibers.cpp  MarchingCubes.cpp  MarkVolmeshCellsInsideSurface.cpp  PassCellData_ug2ug_matching_points.cpp  PassLabels2TetMesh.cpp  PassScalars.cpp  PassScalarsInterp.cpp  PassScalarsReverse.cpp  PassVolmeshLabels2Image.cpp  RelabelSurfaceMesh.cpp  ResampleImage.cpp  S2SError.cpp  SampleImage2UG.cpp  SampleUG2Image.cpp  SampleUG2UG_cells.cpp  SampleUG2UG_nn.cpp  SetScalars.cpp  SmoothMeshTrhoughImage.cpp  SurfaceMeshBoolean.cpp  ThresholdDS.cpp  UniformRemesh.cpp  UniformityIndex.cpp  VTKConvert.cpp  chaste2vtk.cpp  ensight2vtk.cpp
Common/: CommonTools.cpp  CommonTools.h  VTKCommandLineProgress.cpp  VTKCommandLineProgress.h  VTKCommonTools.cpp  VTKCommonTools.h
DistTransform/: CMakeLists.txt  DistanceTransformMesh.cpp
FillSurfaceHoles/: CMakeLists.txt  CoverRefiner.cpp  CoverRefiner.h  FillSurfaceHoles.cpp  HoleFillerDefines.h  SurfaceHoleFiller.cpp  SurfaceHoleFiller.h  UmbrellaWeightedOrder2Smoother.cpp  UmbrellaWeightedOrder2Smoother.h
FillSurfaceHoles/smoothing_test/: Untitled0.ipynb  b.txt  matrix.txt  pts.vtk  sphere.vtk  sphere_closed.vtk
FillSurfaceHoles/sympy_matrix_check/: SmoothingMatrix.ipynb  mytools.py  refined.vtk  smoothed.vtk  test_smoothing.ipynb
Image2Hexmesh/: CMakeLists.txt  Image2Hexmesh.cpp
ImageFeatures/: CMakeLists.txt
ImageFeatures/HOG3D/: CMakeLists.txt  GetHOG3D.cpp
ImageFeatures/LocalIntensity/: CMakeLists.txt  SampleLocalIntensity.cpp
ImageFeatures/LocalStatistics/: CMakeLists.txt  SampleLocalStatistics.cpp
ImageFeatures/ZernikeDecomposition/: CMakeLists.txt
ImageFeatures/ZernikeDecomposition/2D/: CMakeLists.txt  boost_zernike.cxx  decompose_reconstruct.cxx  generate_inputs.cxx
IrisTools/: CMakeLists.txt  ExtractUGRegions.cpp  ExtractUGRegions.cxx  Reclassify.cpp  ReplaceLabel.cpp
LSConformalFlatteningLevy/: CMakeLists.txt
LVMeshFromMRI/: CMakeLists.txt  MRIRemesh.cpp
LaplaceBasedVolMesh/: CMakeLists.txt  README.md
LaplaceBasedVolMesh/VolumetricLVMesh/: CMakeLists.txt  GenerateVolumetricLVMesh.cpp
LaplaceBasedVolMesh/layer_Generation_code/: CMakeLists.txt  GenerateAtrialLayers.cpp  SmoothMeshTrhoughImage.cpp
Matlab/: readme.md
Matlab/asm_fusion/: Procrustes_AlignToShape.m  ShapeCentroid.m  demo_fusion.m  fuse_asms.m  sample_spaces.mat  tform_matrix.m  tform_vector.m  xxyy_to_xyxy.m  xyxy_to_xxyy.m
Matlab/landmarker_final/: AR_landmarks_subgroups.mat  LoadShape.m  Maximize.m  PlotShape.m  SaveShape.m  lm.fig  lm.m  lm.mat  m-001-1.vtp  plot_triangulation.m  runit.m
MinHeap/: MinHeap.h  MinHeap.txx  heap_test.cpp
Python/: bilinear_interpolation.ipynb  dicom2nrrd.py  grd2vtk.ipynb  image2pixelated_mesh.py  sample-distribution.py
Python/Alya/: alefor_saveaxes.py  alya_init.py  animate_ecg.py  calc_ensi_apd90.py  calc_ensi_apd90_interp.py  calc_isochs.py  calc_isochs_ensi.py  cc2csv.py  cgns2vtk.py  correct_cylinder.py  create_hole_field.py  define_activation.py  define_codbo.py  exmedi_witness_stim.py  fibers2mpio.py  field-ensi2mpio.py  grd2vtk.py  inlet_parabolic_function.py  interp_ecg2ensi.py  match_ecg_ensi.py  mpio2txt.py  mpio_i4i8.py  mpio_seq2parall.py  nsi-stats.ipynb  nsi-stats.py  orphan_nodes.py  patch_mpio.py  plot_cc.py  plot_vin.py  post_mpio2vtk.py  ptsres2csv.py  random_material.py  remove_orphaned_nodes.py  rmse_coarse_fine.py  save_field.py  save_particles.py  save_particles_pvd.py  save_particles_pvd_bin.py  save_particles_pvd_bin_chunks.py  save_particles_pvd_bin_split.py  (+4 more)
Python/Elmer/: polydata2elmer.ipynb
Python/FiberPreparation/: combine_fibers.py  extract_array.py  import_fibers.py
Python/MeshCutter/: cut_mesh.ipynb  cut_mesh.py  line1.txt  line2.txt  line3.txt  patch.vtk  patch_regions.vtk
Python/SeedSelection/: epi_mesh.vtk  pointselector-v2.ipynb
Python/TextProgresBar/: TextProgressBar.py  example.py
Python/TextureMapping/: disk_endo.vtk  endo1_new.vtk  texture_mapping.ipynb
Python/junk/: anonim.py  ascii2vtk.py  compare-flowrates.py  dcm2png.py  generate_meshset.py  (+10 more)
TMap/: CMakeLists.txt  TMap.cpp  TMap.h  main.cpp
Testing/: CMakeLists.txt  SurfaceHoleFiller_test.cpp
Testing/FillSurfaceHoles/: blob.vtk
VolumetricLVMesh/: CMakeLists.txt  GenerateVolumetricLVMesh.cpp
cgal/: CMakeLists.txt  image2mesh.cpp  ls_conformal.cpp  poisson_recon.cpp  poly2mesh.cpp  segment_mesh_sdf.cpp  vtk2inrimage.cpp
cgal/nbproject/: configurations.xml  project.xml
cgal/nbproject/private/: configurations.xml
ensight2vtk/: CMakeLists.txt  ensight2vtk.cpp
imported/: itkBinaryThinningImageFilter3D.h
junk/: AtriumSegment.cpp  Blob.cpp  CMakeLists.txt  CloseBVMesh.cpp  ComputeLocalMeshDensity.cpp  GenerateAtrialLayers.cpp  LabelBiventricularMesh.cpp  MeshHeart.cpp  TransformPhilipsHeart.cpp
layer_Generation_code/: CMakeLists.txt  CommonTools.cpp  CommonTools.h  GenerateAtrialLayers.cpp  SmoothMeshTrhoughImage.cpp  readme.txt
nbproject/: configurations.xml  project.xml
vtu2cgns/: CMakeLists.txt  vtu2cgns.cpp
(+85 files in other folders)
