FIND_PACKAGE(ITK 4 REQUIRED)
FIND_PACKAGE(VTK REQUIRED)

INCLUDE(${VTK_USE_FILE})
INCLUDE(${ITK_USE_FILE})

find_package(OpenMP)
if (OPENMP_FOUND)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()


ADD_EXECUTABLE(Image2Hexmesh ${MYCOMMON_FILES} Image2Hexmesh.cpp)
TARGET_LINK_LIBRARIES(Image2Hexmesh ${ITK_LIBRARIES} ${VTK_LIBRARIES} )


