FIND_PACKAGE(ITK REQUIRED)
FIND_PACKAGE(VTK REQUIRED)

FIND_PACKAGE(Armadillo REQUIRED)
find_package(Eigen3 REQUIRED)

include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${ARMADILLO_INCLUDES})
INCLUDE(${VTK_USE_FILE})
INCLUDE(${ITK_USE_FILE})


ADD_EXECUTABLE(ls_conformal ${MYCOMMON_FILES} ls_conformal.cpp)
TARGET_LINK_LIBRARIES(ls_conformal ${ITK_LIBRARIES} ${VTK_LIBRARIES} ${ARMADILLO_LIBRARIES} )


