cmake_minimum_required(VERSION 2.8)

PROJECT(HOG3D)

FIND_PACKAGE(ITK REQUIRED)
FIND_PACKAGE(VTK REQUIRED)

INCLUDE(${ITK_USE_FILE})

FIND_PACKAGE(Armadillo REQUIRED)
include_directories(${ARMADILLO_INCLUDES})


ADD_EXECUTABLE(GetHOG3D GetHOG3D.cpp)
TARGET_LINK_LIBRARIES(GetHOG3D ${ITK_LIBRARIES} ${VTK_LIBRARIES} ${ARMADILLO_LIBRARIES})


